# Tek-1-PSU

./: README.md
minishell1/: a.out  mysh
minishell1/PSU_minishell1_2019/: CMakeLists.txt  Makefile  blend.sh  blender.sh  floating.c  log2.txt  mysh  new_test  test
minishell1/PSU_minishell1_2019/include/: all_includes.h  my.h
minishell1/PSU_minishell1_2019/lib/include/: struct.h
minishell1/PSU_minishell1_2019/lib/my/: flag_functions0.c  get_next_line.h  my_str_to_word_array.c  my_strcmp.c  my_strdup.c
minishell1/PSU_minishell1_2019/lib/my/include/: my.h  my_macro_abs.h
minishell1/PSU_minishell1_2019/src/: if_trees.c  main.c  my_fork.c
my_ls/PSU_my_ls_2019/: CMakeLists.txt  my_ls
my_ls/PSU_my_ls_2019/include/: all_includes.h  my_ls.h  my_printf.h
my_ls/PSU_my_ls_2019/lib/include/: my.h
my_ls/PSU_my_ls_2019/lib/my/: flag_functions2.c  formating.c  my_compute_power_rec.c  my_delete_zeros.c
my_ls/PSU_my_ls_2019/lib/my/src/: flag_functions0.c
my_ls/PSU_my_ls_2019/src/: error_handling.c  ls_cr.c  ls_l.c  ls_r.c  ls_t.c  main.c  my_only_ls.c
my_printf/PSU_my_printf_2019/: Makefile  a.out  main.c
my_sokoban/PSU_my_sokoban_2019/: CMakeLists.txt  my_sokoban  test  test2  test3
my_sokoban/my_popup_2019/: Makefile  main.c  my_popup
my_sokoban/my_sokoban/: CMakeLists.txt
my_sokoban/test_clock/: CMakeLists.txt  main.c
navy/PSU_navy_2019/: CMakeLists.txt  Makefile  navy  new  test.txt
navy/PSU_navy_bootstrap_2019/: CMakeLists.txt  Makefile  main.c
tetris/PSU_tetris_2019/: CMakeLists_test.txt  header  help  mykeyboard.txt  tetris
(+224 files in other folders)
